objects/SBQQ__PriceCondition__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceConditionHelp</customHelpPage>
    <description>Condition that fires the parent price rule.</description>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>SBQQ__MasterContract__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Electrician_1_OT_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Electrician_1_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Electrician_2_OT_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Electrician_2_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Engineer_OT_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Solar_Engineer_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Regional_Manager_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Regional_Manager_OT_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Internal_Prevailing_Wage_Rate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Markup__c</fullName>
                </value>
                <value>
                    <fullName>PercentMarkUp__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Cost__c</fullName>
                </value>
                <value>
                    <fullName>Module_Wash_Fixed_Price__c</fullName>
                </value>
                <value>
                    <fullName>Snow_Removal_Fixed_Price__c</fullName>
                </value>
                <value>
                    <fullName>Vegetation_Management_Fixed_Price__c</fullName>
                </value>
                <value>
                    <fullName>Labor_Billing__c</fullName>
                </value>
                <value>
                    <fullName>P_M_Billing__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductFamily__c</fullName>
                </value>
                <value>
                    <fullName>Equipment_Rental_Included__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__MarkupRate__c</fullName>
                </value>
                <value>
                    <fullName>Contract_Markup_Applied__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__PricingMethod__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterFormula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Filter Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterType__c</fullName>
        <description>Type of filtering used in this condition.</description>
        <inlineHelpText>Choose Variable to evaluate this condition against a Summary Variable; otherwise, choose Value.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that filters this condition.</description>
        <inlineHelpText>Select the Summary Variable you want this condition to use as a filter.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Filtered Price Conditions</relationshipLabel>
        <relationshipName>FilteredPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Price Rule&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Price Rule&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Object__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Summary Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator that is applied when comparing the Field with the Value.</description>
        <inlineHelpText>Select the operator to apply when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Price rule running this condition.</description>
        <inlineHelpText>Price rule running this condition.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Conditions</relationshipLabel>
        <relationshipName>PriceConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedFormula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Tested Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable tested when evaluating this price condition.</description>
        <inlineHelpText>Summary variable tested by this price condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>Value to evaluate against.</description>
        <inlineHelpText>Enter the value you want to match in the field you selected using the operator chosen.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Condition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Config_attr_config_scoped_price_rules</fullName>
        <active>true</active>
        <description>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__Object__c, &quot;Configuration Attribute&quot;), NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &quot;Configurator&quot;)))</errorConditionFormula>
        <errorMessage>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Config_attr_tested_object_with_formula</fullName>
        <active>true</active>
        <description>Configuration Attribute as a tested object can’t be evaluated against a formula.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__Object__c, &quot;Configuration Attribute&quot;), (ISPICKVAL(SBQQ__FilterType__c, &quot;Formula&quot;)))</errorConditionFormula>
        <errorMessage>Configuration Attribute as a tested object can’t be evaluated against a formula.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Filter_formula_field_null</fullName>
        <active>true</active>
        <description>Require Filter Formula when Filter Type is Formula.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterType__c, &quot;Formula&quot;), ISBLANK(SBQQ__FilterFormula__c))</errorConditionFormula>
        <errorMessage>If Filter Type is Formula, then Filter Formula cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Tested_field_or_variable</fullName>
        <active>true</active>
        <description>Require either tested field or variable.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(SBQQ__Field__c)),ISBLANK(SBQQ__TestedVariable__c),ISBLANK(SBQQ__TestedFormula__c))</errorConditionFormula>
        <errorMessage>You must specify either field or tested variable.</errorMessage>
    </validationRules>
</CustomObject>